# Py-Roar

./: .env  .env.example  .gitignore  pyproject.toml
app/: main.py
app/config/: __init__.py  log_config.py  settings.py  types.py
app/controllers/: auth_handlers.py  users_handlers.py
app/core/: app.py  dispatcher.py  req.py  res.py  router.py  types.py
app/db/: __init__.py  db_objects.py  default.py  init_db.py  migrate.py
app/db/sql/: __init__.py  db_objects.py  default.py  init_db.py  migration.py  migration_ddl.py  types.py
app/dispatches/: dispatches.py  types.py
app/repo/: repo.py
app/routes/: route_obj.py  routes.py  types.py
app/types/: __init__.py  post.py  req.py  res.py  user.py
app/utils/: __init__.py  default_data.py  hash_password.py  time_utils.py
