[project]
name = "py-roar"
version = "0.1.0"
description = ""
authors = [
    {name = "GicheruBenjamin",email = "benjaminnjuguna77@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
